--- a/style.css
+++ b/style.css
@@ -176,7 +176,10 @@ body
 .img-fluid {
     margin-top: 50px;
 }
-
+.comments
+{
+    margin-top: 30px;
+}
 textarea
 {
     background: #7672ed;
@@ -186,7 +189,6 @@ textarea::placeholder
 {
     color: black;
 }
-
 
 .mp3-box {
     width: 100%;
@@ -202,6 +204,10 @@ textarea::placeholder
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Slight shadow */
 }
 
+.audio
+{
+
+}
 /*---Settings Section---*/
 #contact
 {
