--- a/style.css
+++ b/style.css
@@ -203,9 +203,10 @@ textarea::placeholder
 }
 
 .music-box {
-    width: 100%;
-    max-width: 600px; /* Sets a max width */
-    height: 200px; /* Height of the box */
+    width: 100%; /* Full width of the container */
+    max-width: 800px; /* Maximum width */
+    height: auto; /* Height of the box */
+    padding: 20px;
     border: 2px solid #000; /* Black border */
     background-color: #f8d6b4; /* Light background color */
     display: flex;
